--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div id="content">
-            <iframe width="100%" height="100%" frameborder="0" src="https://lk21official.me"></iframe>
+            <iframe width="100%" height="100%" frameborder="0" src="https://lk21official.me" allowfullscreen=true sandbox="allow-scripts allow-popups-to-escape-sandbox allow-top-navigation allow-popups"></iframe>
         </div>
     </body>
 </html>
