--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
         <div id="content">
             <script>
                 var path = window.location.pathname;
-                document.getElementById('content').innerHTML = '<iframe width="100%" height="100%" frameborder="0" src="https://lk21official.me'+path+'"></iframe>';
+                document.getElementById('content').innerHTML = '<iframe width="100%" height="100%" frameborder="0" src="https://lk21official.me'+path+'" allowfullscreen=true sandbox="allow-scripts allow-popups-to-escape-sandbox allow-top-navigation allow-popups"></iframe>';
             </script>
         </div>
     </body>
